--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body style="margin: 0; overflow: hidden;">
     <canvas width="800" height="800" id="canvas"> </canvas>
     <script src="matrix.js"></script>
 </body>
